Fix media halign default value, hero align and preview scrolling display in editor

--- a/src/components/control-sections/_editor.scss
+++ b/src/components/control-sections/_editor.scss
@@ -122,6 +122,10 @@
 			background: var(--novablocks-section-controls-accent);
 			border-color: var(--novablocks-section-controls-accent);
 		}
+
+		&:disabled {
+			color: rgba(255,255,255,0.5);
+		}
 	}
 }
 
